--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Police_Tracking_Information</string>
+    <string name="app_name">PTI</string>
+    <string name="toast">Email already exist, Please sign in </string>
 
     //Different account type option for Private vehicle owner and police
     <string-array name="userTypes">
@@ -7,4 +8,6 @@
         <item>Vehicle Owner</item>
         <item>Police</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
