--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
 
     <string name="copy_right" translatable="false">Copyrights %1$d By Rukayat Oyefeso</string>
     <!---->
+
+    <string name="instructions">Authenticate using <b>Touch ID</b> instead of entering your password.
+</string>
 </resources>
